infra/global/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polyglot-app-template
  labels:
    app: polyglot-app-template
spec:
  selector:
    app: polyglot-app-template
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
