infra/global/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polyglot-app-template
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: polyglot-app-template.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polyglot-app-template
                port:
                  number: 80
